# native-activity-exokit

./: .gitignore  README.md  local.properties
app/src/main/OLDcpp/: CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  main.cpp  package-lock.json  package.json
